k8s/service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: heroes-service
# spec:
#   selector:
#     app: heroes
#   ports:
#   - port: 80
#     protocol: TCP
#     targetPort: 80
#   type: LoadBalancer

apiVersion: v1
kind: Service
metadata:
  name: heroes-service
spec:
  selector:
    app: heroes
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
